2001-09-20  Jim Meyering  <meyering@lucent.com>

	* xstrtoimax.m4 (jm_AC_PREREQ_XSTRTOIMAX): Check for declaration of
	strtoimax.
	* xstrtoumax.m4 (jm_AC_PREREQ_XSTRTOUMAX): Check for declaration of
	strtoumax.

2001-09-17  Jim Meyering  <meyering@lucent.com>

	* chown.m4, fstypename.m4, getgroups.m4, gettimeofday.m4,
	* jm-mktime.m4, lstat.m4, malloc.m4, memcmp.m4, mkdir-slash.m4,
	* nanosleep.m4, putenv.m4, readdir.m4, realloc.m4, rename.m4,
	* st_dm_mode.m4, stat.m4, strerror_r.m4, timespec.m4, utimbuf.m4,
	* utimes.m4: Use AC_DEFINE rather than AC_DEFINE_UNQUOTED,
	whenever the right hand side need not be expanded by the shell.

2001-09-16  Paul Eggert  <eggert@twinsun.com>

	* fnmatch.m4 (jm_FUNC_FNMATCH): Remove test for GNU C
	library.  It's not correct, as some older glibcs are buggy.
	fnmatch wasn't fixed until glibc 2.2.

	Use AC_DEFINE, not AC_DEFINE_UNQUOTED, as there's no
	special shell magic here.

2001-09-16  Jim Meyering  <meyering@lucent.com>

	* mkdir-slash.m4 (UTILS_FUNC_MKDIR_TRAILING_SLASH): New file/macro.
	* jm-macros.m4: Require it.

2001-09-15  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4: Check for help2man.

2001-09-11  Jim Meyering  <meyering@lucent.com>

	* host-os.m4 (UTILS_HOST_OS): New file/macro.
	The body, by Paul Eggert, was moved here from configure.in.
	* jm-macros.m4: Require UTILS_HOST_OS.

2001-09-04  Paul Eggert  <eggert@twinsun.com>

	* prereq.m4 (jm_PREREQ_XREADLINK): New macro.
	(jm_PREREQ): Use it.

2001-09-03  Paul Eggert  <eggert@twinsun.com>

	* prereq.m4 (jm_PREREQ_XGETCWD): Check for limits.h and
	sys/param.h, as pathmax.h includes them.

2001-09-03  Paul Eggert  <eggert@twinsun.com>

	* prereq.m4 (jm_PREREQ): Add jm_PREREQ_XGETCWD.
	(jm_PREREQ_XGETCWD): New macro.

	* getcwd.m4: New file.

2001-09-01  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (jm_MACROS): Check for canonicalize_file_name.
	Used by df.

2001-08-30  Paul Eggert  <eggert@twinsun.com>
