@@ -23,6 +23,7 @@ getcwd.m4 \
 getgroups.m4 \
 getline.m4 \
 getloadavg.m4 \
+gettext.m4 \
 gettimeofday.m4 \
 glibc.m4 \
 glibc21.m4 \
@@ -40,7 +41,6 @@ jm-winsz2.m4 \
 lchown.m4 \
 lcmessage.m4 \
 lib-check.m4 \
-libintl.m4 \
 link-follow.m4 \
 longlong.m4 \
 ls-mntd-fs.m4 \
